WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199465
REGRESSION (
r246817
): fast/events/ios/key-events-comprehensive/key-events-{control, control-shift}.html are failing
https://bugs.webkit.org/show_bug.cgi?id=199465
Summary
REGRESSION (r246817): fast/events/ios/key-events-comprehensive/key-events-{co...
Daniel Bates
Reported
2019-07-03 15:03:21 PDT
Oops! In the fix for
bug #199204
I was a bit too nice. It does not make sense to allow cursor key commands when there is no selection. The tests: fast/events/ios/key-events-comprehensive/key-events-{control, control-shift}.html are failing fail because try to perform cursor movements (like Control + A to move to the start of the line) even when there is no selection. Handled key commands don't dispatch DOM keypress events.
Attachments
Patch
(2.11 KB, patch)
2019-07-03 15:05 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-07-03 15:03:36 PDT
<
rdar://problem/52613496
>
Daniel Bates
Comment 2
2019-07-03 15:05:59 PDT
Created
attachment 373417
[details]
Patch
Daniel Bates
Comment 3
2019-07-03 16:22:49 PDT
Comment on
attachment 373417
[details]
Patch Clearing flags on attachment: 373417 Committed
r247116
: <
https://trac.webkit.org/changeset/247116
>
Daniel Bates
Comment 4
2019-07-03 16:22:50 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug