REGRESSION (r246817): fast/events/ios/key-events-comprehensive/key-events-{control, control-shift}.html are failing https://bugs.webkit.org/show_bug.cgi?id=199465 <rdar://problem/52613496>

Reviewed by Wenson Hsieh.

Don't advertise that WebKit can perform cursor movements when there isn't some kind of selection.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView canPerformAction:withSender:]):

Canonical link: https://commits.webkit.org/213382@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247116 268f45cc-cd09-0410-ab3c-d52691b4dbfc